--- a/Object_Detection_1.ipynb
+++ b/Object_Detection_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2NNWRR+Yrk1x4o+S9Qt6R",
+      "authorship_tag": "ABX9TyOLclvwpyGIcjgBvNlq91Xk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,6 +202,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#YOLOv5 Model Clon"
+      ],
+      "metadata": {
+        "id": "Cy6i_1b79p6h"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!git clone https://github.com/ultralytics/yolov5"
@@ -246,6 +255,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Compatible Packages Installation"
+      ],
+      "metadata": {
+        "id": "6Mm590Bw-EgC"
+      }
     },
     {
       "cell_type": "code",
@@ -312,6 +330,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Object Detection"
+      ],
+      "metadata": {
+        "id": "6r0wvkau-O7b"
+      }
     },
     {
       "cell_type": "code",
