--- a/Object_Detection_1.ipynb
+++ b/Object_Detection_1.ipynb
@@ -46,15 +46,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LtsxRgr63gr0",
-        "outputId": "7ef85223-5855-4f63-f77b-d3d32b85943b"
+        "outputId": "ab6ffe8b-b1fa-4dd4-cfbd-6ec0cb849323"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -70,30 +70,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "3jVSqCFHiPyu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "51edba5c-59c7-4f90-aefc-38e42955a703"
+        "outputId": "4d3f4c2f-4d7c-4776-96f1-df605d9ebfdb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pip in /usr/local/lib/python3.10/dist-packages (23.1.2)\n",
-            "Collecting pip\n",
-            "  Downloading pip-23.3.1-py3-none-any.whl (2.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m12.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pip\n",
-            "  Attempting uninstall: pip\n",
-            "    Found existing installation: pip 23.1.2\n",
-            "    Uninstalling pip-23.1.2:\n",
-            "      Successfully uninstalled pip-23.1.2\n",
-            "Successfully installed pip-23.3.1\n",
-            "Requirement already satisfied: tensorflow in /usr/local/lib/python3.10/dist-packages (2.14.0)\n",
+            "Requirement already satisfied: pip in /usr/local/lib/python3.10/dist-packages (23.3.1)\n",
+            "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+            "\u001b[0mRequirement already satisfied: tensorflow in /usr/local/lib/python3.10/dist-packages (2.14.0)\n",
             "Requirement already satisfied: absl-py>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from tensorflow) (1.4.0)\n",
             "Requirement already satisfied: astunparse>=1.6.0 in /usr/local/lib/python3.10/dist-packages (from tensorflow) (1.6.3)\n",
             "Requirement already satisfied: flatbuffers>=23.5.26 in /usr/local/lib/python3.10/dist-packages (from tensorflow) (23.5.26)\n",
@@ -182,9 +174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PZ7ucDjjmV5v",
-        "outputId": "b08ef4a2-a9ca-4cf6-ff7a-b22f67cd4247"
+        "outputId": "1c1c70be-33af-4b09-de3b-7fa4793ed65a"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +207,7 @@
       "metadata": {
         "id": "0UTnRlZAmkYr"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -237,21 +229,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "snxST5tVm1P5",
-        "outputId": "413362e2-04aa-47cd-d567-94a148b6826f"
+        "outputId": "2b08b838-3acd-49a1-d028-2a7e5ea4b4d4"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'yolov5'...\n",
-            "remote: Enumerating objects: 16088, done.\u001b[K\n",
-            "remote: Counting objects: 100% (32/32), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Total 16088 (delta 10), reused 14 (delta 2), pack-reused 16056\u001b[K\n",
-            "Receiving objects: 100% (16088/16088), 14.72 MiB | 11.04 MiB/s, done.\n",
-            "Resolving deltas: 100% (11042/11042), done.\n"
+            "fatal: destination path 'yolov5' already exists and is not an empty directory.\n"
           ]
         }
       ]
@@ -266,9 +252,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o-S1suysrAwm",
-        "outputId": "8bca32db-9f45-4a2b-bad0-ddf3def836ec"
+        "outputId": "fdbc68ba-82e6-475b-a3ec-09b9297939e0"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,41 +281,35 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         },
         "id": "CdiKBHI5rYwz",
-        "outputId": "16d1c9e9-cbdb-4bb0-da4e-499fa2c27bd0"
+        "outputId": "24637e46-5dba-4a67-d85d-6aced15ba9a5"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting gitpython>=3.1.30 (from -r requirements.txt (line 5))\n",
-            "  Downloading GitPython-3.1.40-py3-none-any.whl.metadata (12 kB)\n",
+            "Requirement already satisfied: gitpython>=3.1.30 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 5)) (3.1.40)\n",
             "Requirement already satisfied: matplotlib>=3.3 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 6)) (3.7.1)\n",
             "Requirement already satisfied: numpy>=1.22.2 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 7)) (1.23.5)\n",
             "Requirement already satisfied: opencv-python>=4.1.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 8)) (4.8.0.76)\n",
-            "Collecting Pillow>=10.0.1 (from -r requirements.txt (line 9))\n",
-            "  Downloading Pillow-10.1.0-cp310-cp310-manylinux_2_28_x86_64.whl.metadata (9.5 kB)\n",
+            "Requirement already satisfied: Pillow>=10.0.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 9)) (10.1.0)\n",
             "Requirement already satisfied: psutil in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 10)) (5.9.5)\n",
             "Requirement already satisfied: PyYAML>=5.3.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 11)) (6.0.1)\n",
             "Requirement already satisfied: requests>=2.23.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 12)) (2.31.0)\n",
             "Requirement already satisfied: scipy>=1.4.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 13)) (1.11.4)\n",
-            "Collecting thop>=0.1.1 (from -r requirements.txt (line 14))\n",
-            "  Downloading thop-0.1.1.post2209072238-py3-none-any.whl (15 kB)\n",
+            "Requirement already satisfied: thop>=0.1.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 14)) (0.1.1.post2209072238)\n",
             "Requirement already satisfied: torch>=1.8.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 15)) (2.1.0+cu118)\n",
             "Requirement already satisfied: torchvision>=0.9.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 16)) (0.16.0+cu118)\n",
             "Requirement already satisfied: tqdm>=4.64.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 17)) (4.66.1)\n",
-            "Collecting ultralytics>=8.0.147 (from -r requirements.txt (line 18))\n",
-            "  Downloading ultralytics-8.0.222-py3-none-any.whl.metadata (32 kB)\n",
+            "Requirement already satisfied: ultralytics>=8.0.147 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 18)) (8.0.222)\n",
             "Requirement already satisfied: pandas>=1.1.4 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 27)) (1.5.3)\n",
             "Requirement already satisfied: seaborn>=0.11.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 28)) (0.12.2)\n",
             "Requirement already satisfied: setuptools>=65.5.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 42)) (67.7.2)\n",
-            "Collecting gitdb<5,>=4.0.1 (from gitpython>=3.1.30->-r requirements.txt (line 5))\n",
-            "  Downloading gitdb-4.0.11-py3-none-any.whl.metadata (1.2 kB)\n",
+            "Requirement already satisfied: gitdb<5,>=4.0.1 in /usr/local/lib/python3.10/dist-packages (from gitpython>=3.1.30->-r requirements.txt (line 5)) (4.0.11)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.3->-r requirements.txt (line 6)) (1.2.0)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.3->-r requirements.txt (line 6)) (0.12.1)\n",
             "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.3->-r requirements.txt (line 6)) (4.46.0)\n",
@@ -350,44 +330,13 @@
             "Requirement already satisfied: triton==2.1.0 in /usr/local/lib/python3.10/dist-packages (from torch>=1.8.0->-r requirements.txt (line 15)) (2.1.0)\n",
             "Requirement already satisfied: py-cpuinfo in /usr/local/lib/python3.10/dist-packages (from ultralytics>=8.0.147->-r requirements.txt (line 18)) (9.0.0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.1.4->-r requirements.txt (line 27)) (2023.3.post1)\n",
-            "Collecting smmap<6,>=3.0.1 (from gitdb<5,>=4.0.1->gitpython>=3.1.30->-r requirements.txt (line 5))\n",
-            "  Downloading smmap-5.0.1-py3-none-any.whl.metadata (4.3 kB)\n",
+            "Requirement already satisfied: smmap<6,>=3.0.1 in /usr/local/lib/python3.10/dist-packages (from gitdb<5,>=4.0.1->gitpython>=3.1.30->-r requirements.txt (line 5)) (5.0.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib>=3.3->-r requirements.txt (line 6)) (1.16.0)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch>=1.8.0->-r requirements.txt (line 15)) (2.1.3)\n",
             "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch>=1.8.0->-r requirements.txt (line 15)) (1.3.0)\n",
-            "Downloading GitPython-3.1.40-py3-none-any.whl (190 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m190.6/190.6 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading Pillow-10.1.0-cp310-cp310-manylinux_2_28_x86_64.whl (3.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.6/3.6 MB\u001b[0m \u001b[31m10.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading ultralytics-8.0.222-py3-none-any.whl (653 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m654.0/654.0 kB\u001b[0m \u001b[31m16.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading gitdb-4.0.11-py3-none-any.whl (62 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.7/62.7 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading smmap-5.0.1-py3-none-any.whl (24 kB)\n",
-            "Installing collected packages: smmap, Pillow, gitdb, thop, gitpython, ultralytics\n",
-            "  Attempting uninstall: Pillow\n",
-            "    Found existing installation: Pillow 9.4.0\n",
-            "    Uninstalling Pillow-9.4.0:\n",
-            "      Successfully uninstalled Pillow-9.4.0\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "imageio 2.31.6 requires pillow<10.1.0,>=8.3.2, but you have pillow 10.1.0 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed Pillow-10.1.0 gitdb-4.0.11 gitpython-3.1.40 smmap-5.0.1 thop-0.1.1.post2209072238 ultralytics-8.0.222\n",
             "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
             "\u001b[0m"
           ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "PIL"
-                ]
-              }
-            }
-          },
-          "metadata": {}
         }
       ]
     },
@@ -410,9 +359,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1nd65NWes6eL",
-        "outputId": "4289bd12-c1c9-42a4-800d-93b3f8739604"
+        "outputId": "2876e046-9024-479d-cd7b-b5a86951e224"
       },
-      "execution_count": 24,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,9 +372,9 @@
             "\n",
             "Fusing layers... \n",
             "YOLOv5m summary: 290 layers, 21172173 parameters, 0 gradients, 48.9 GFLOPs\n",
-            "image 1/1 /content/drive/MyDrive/Colab_Notebooks/Images/bicycle.jpeg: 448x640 1 bicycle, 745.3ms\n",
-            "Speed: 2.8ms pre-process, 745.3ms inference, 1.7ms NMS per image at shape (1, 3, 640, 640)\n",
-            "Results saved to \u001b[1mruns/detect/exp8\u001b[0m\n"
+            "image 1/1 /content/drive/MyDrive/Colab_Notebooks/Images/bicycle.jpeg: 448x640 1 bicycle, 947.3ms\n",
+            "Speed: 5.1ms pre-process, 947.3ms inference, 2.3ms NMS per image at shape (1, 3, 640, 640)\n",
+            "Results saved to \u001b[1mruns/detect/exp9\u001b[0m\n"
           ]
         }
       ]
@@ -450,9 +399,9 @@
           "height": 200
         },
         "id": "YmQxNnZX8usq",
-        "outputId": "590be87f-5645-4023-fbdb-542a75a051f4"
+        "outputId": "9a751bb2-cdc5-4a02-c6ad-4cf1090d0a45"
       },
-      "execution_count": 25,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,7 +412,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 9
         }
       ]
     }
