--- a/YOLOv5_Object_Detection.ipynb
+++ b/YOLOv5_Object_Detection.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0UfrKGLblJUhk88JP+i7p",
+      "collapsed_sections": [
+        "J4oaepD4A-Eh"
+      ],
+      "authorship_tag": "ABX9TyN42tK2BgruyONMOsMQQSj/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +32,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Mounting Drive"
+        "#Mounting Drive\n",
+        "Mount your Google-Drive to Google-Colab-Notebook\n",
+        "1. Before mounting make sure to authorize GoogleDrive\n",
+        "2. Enter your own G-Drive path"
       ],
       "metadata": {
         "id": "J4oaepD4A-Eh"
@@ -46,9 +52,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LtsxRgr63gr0",
-        "outputId": "570e6cb8-ca45-4888-e434-36286d64e395"
+        "outputId": "4d7c0f25-4270-4db1-f740-f728873a93ba"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,21 +68,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Packages Installation"
+        "# Installing Required Packages and Libraries\n",
+        "Install and import packages and libraries required for Object Detection model\n",
+        "1. Codes that start with ! run through terminal/command"
       ],
       "metadata": {
         "id": "UAculyZC6W8I"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Install and Upgrade pip, TensorFlow, and Tensorboard"
+      ],
+      "metadata": {
+        "id": "cxwatnTCU0P_"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "3jVSqCFHiPyu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aaed5600-7b77-4a3d-a981-454532e25a33"
+        "outputId": "6a338712-7a73-48fb-f700-6c6d3773ff21"
       },
       "outputs": [
         {
@@ -165,6 +182,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Install Torch library"
+      ],
+      "metadata": {
+        "id": "saOCEYG_UaR5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install torch"
@@ -174,9 +200,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PZ7ucDjjmV5v",
-        "outputId": "d1d0c81e-a5db-4d90-956d-7a26c584d866"
+        "outputId": "0758826d-62bf-4461-ee53-ae925946c889"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,6 +225,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Import Torch library"
+      ],
+      "metadata": {
+        "id": "hUoJmo8KUk0k"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import torch\n",
@@ -207,16 +242,25 @@
       "metadata": {
         "id": "0UTnRlZAmkYr"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#Object-Detection YOLOv5 Model Clon"
+        "#Instaling Object-Detection Model YOLOv5"
       ],
       "metadata": {
         "id": "Cy6i_1b79p6h"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Clone YOLOv5 from its GitHub page. It will be cloned in your G-Drive"
+      ],
+      "metadata": {
+        "id": "HJiS8Tt_QOrE"
       }
     },
     {
@@ -229,9 +273,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "snxST5tVm1P5",
-        "outputId": "c3374394-93bd-49fa-835b-e2f722ebd5c5"
+        "outputId": "5b49937d-ca67-4ead-92f8-75f15b735aba"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,6 +287,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "It will go inside yolov5 shell in your G-Drive for installing the compatibe packages versions (virtual environment)"
+      ],
+      "metadata": {
+        "id": "dlY_HptxP8jo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%cd yolov5"
@@ -252,9 +305,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o-S1suysrAwm",
-        "outputId": "f4f74873-f621-4808-8af4-e93ec2d14ce0"
+        "outputId": "5f6dc3c3-4563-4922-a2a1-037a337405e7"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,7 +321,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Yolov5 Compatible Packages Installation"
+        "Install the Yolov5 compatibe versions of packages in yolov5 shell"
       ],
       "metadata": {
         "id": "6Mm590Bw-EgC"
@@ -284,9 +337,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdiKBHI5rYwz",
-        "outputId": "07e6d36a-5937-4275-ed11-3195a7de1e3f"
+        "outputId": "25472ac9-0a09-470e-ea96-41046a4c4e76"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +358,7 @@
             "Requirement already satisfied: torch>=1.8.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 15)) (2.1.0+cu118)\n",
             "Requirement already satisfied: torchvision>=0.9.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 16)) (0.16.0+cu118)\n",
             "Requirement already satisfied: tqdm>=4.64.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 17)) (4.66.1)\n",
-            "Requirement already satisfied: ultralytics>=8.0.147 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 18)) (8.0.222)\n",
+            "Requirement already satisfied: ultralytics>=8.0.147 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 18)) (8.0.227)\n",
             "Requirement already satisfied: pandas>=1.1.4 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 27)) (1.5.3)\n",
             "Requirement already satisfied: seaborn>=0.11.0 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 28)) (0.12.2)\n",
             "Requirement already satisfied: setuptools>=65.5.1 in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 42)) (67.7.2)\n",
@@ -343,10 +396,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Running Object Detection"
+        "#Running Object Detection Model"
       ],
       "metadata": {
         "id": "6r0wvkau-O7b"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Enter source image path\n",
+        "1. Do not have space or special characters in your names, folders, and their paths"
+      ],
+      "metadata": {
+        "id": "DCVEjMEftm24"
       }
     },
     {
@@ -359,22 +422,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1nd65NWes6eL",
-        "outputId": "fc2c2b2d-ae95-4696-d55c-67abf9c2c702"
+        "outputId": "03c6e49b-29d0-4347-c1f1-d26956a26497"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[34m\u001b[1mdetect: \u001b[0mweights=['yolov5m.pt'], source=/content/drive/MyDrive/Colab_Notebooks/Images/street.jpg, data=data/coco128.yaml, imgsz=[640, 640], conf_thres=0.5, iou_thres=0.45, max_det=1000, device=, view_img=False, save_txt=False, save_csv=False, save_conf=False, save_crop=False, nosave=False, classes=None, agnostic_nms=False, augment=False, visualize=False, update=False, project=runs/detect, name=exp, exist_ok=False, line_thickness=3, hide_labels=False, hide_conf=False, half=False, dnn=False, vid_stride=1\n",
-            "YOLOv5 🚀 v7.0-247-g3f02fde Python-3.10.12 torch-2.1.0+cu118 CPU\n",
+            "YOLOv5 🚀 v7.0-249-gf400bba Python-3.10.12 torch-2.1.0+cu118 CPU\n",
             "\n",
             "Fusing layers... \n",
             "YOLOv5m summary: 290 layers, 21172173 parameters, 0 gradients, 48.9 GFLOPs\n",
-            "image 1/1 /content/drive/MyDrive/Colab_Notebooks/Images/street.jpg: 448x640 2 persons, 4 cars, 4 traffic lights, 1 stop sign, 2 handbags, 791.5ms\n",
-            "Speed: 1.0ms pre-process, 791.5ms inference, 3.5ms NMS per image at shape (1, 3, 640, 640)\n",
-            "Results saved to \u001b[1mruns/detect/exp13\u001b[0m\n"
+            "image 1/1 /content/drive/MyDrive/Colab_Notebooks/Images/street.jpg: 448x640 2 persons, 4 cars, 4 traffic lights, 1 stop sign, 2 handbags, 713.0ms\n",
+            "Speed: 1.0ms pre-process, 713.0ms inference, 4.5ms NMS per image at shape (1, 3, 640, 640)\n",
+            "Results saved to \u001b[1mruns/detect/exp2\u001b[0m\n"
           ]
         }
       ]
@@ -382,16 +445,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Showing Results"
+        "#Showing Detected Results"
       ],
       "metadata": {
         "id": "EiphefCj0juL"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Correct the file name and the path based on the last line of the above code"
+      ],
+      "metadata": {
+        "id": "hnKVyYzyvrTu"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "Image('runs/detect/exp13/street.jpg')"
+        "Image('runs/detect/exp2/street.jpg')"
       ],
       "metadata": {
         "colab": {
@@ -399,9 +471,9 @@
           "height": 725
         },
         "id": "YmQxNnZX8usq",
-        "outputId": "3dd2ff72-e3b7-4b45-f4a9-54dc995f3246"
+        "outputId": "c555ea6e-c48b-41f8-a3dd-30432431654f"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +484,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     }
