--- a/YOLOv5_Object_Detection.ipynb
+++ b/YOLOv5_Object_Detection.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "J4oaepD4A-Eh"
       ],
-      "authorship_tag": "ABX9TyN42tK2BgruyONMOsMQQSj/",
+      "authorship_tag": "ABX9TyPMnPU+nOwndzUvCQhMJ7B8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,8 @@
       "source": [
         "#Mounting Drive\n",
         "Mount your Google-Drive to Google-Colab-Notebook\n",
-        "1. Before mounting make sure to authorize GoogleDrive\n",
-        "2. Enter your own G-Drive path"
+        "*   Before mounting make sure to authorize GoogleDrive\n",
+        "*   Enter your own G-Drive path"
       ],
       "metadata": {
         "id": "J4oaepD4A-Eh"
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LtsxRgr63gr0",
-        "outputId": "4d7c0f25-4270-4db1-f740-f728873a93ba"
+        "outputId": "b91ce456-28f6-4122-e68a-4afd42f3d44a"
       },
       "execution_count": 1,
       "outputs": [
@@ -60,7 +60,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -70,7 +70,7 @@
       "source": [
         "# Installing Required Packages and Libraries\n",
         "Install and import packages and libraries required for Object Detection model\n",
-        "1. Codes that start with ! run through terminal/command"
+        "* Codes that start with ! run through terminal/command"
       ],
       "metadata": {
         "id": "UAculyZC6W8I"
@@ -93,16 +93,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6a338712-7a73-48fb-f700-6c6d3773ff21"
+        "outputId": "6e12aa6b-4065-4b75-d4f1-36ccd12f8782"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pip in /usr/local/lib/python3.10/dist-packages (23.3.1)\n",
-            "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-            "\u001b[0mRequirement already satisfied: tensorflow in /usr/local/lib/python3.10/dist-packages (2.14.0)\n",
+            "Requirement already satisfied: pip in /usr/local/lib/python3.10/dist-packages (23.1.2)\n",
+            "Collecting pip\n",
+            "  Downloading pip-23.3.1-py3-none-any.whl (2.1 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pip\n",
+            "  Attempting uninstall: pip\n",
+            "    Found existing installation: pip 23.1.2\n",
+            "    Uninstalling pip-23.1.2:\n",
+            "      Successfully uninstalled pip-23.1.2\n",
+            "Successfully installed pip-23.3.1\n",
+            "Requirement already satisfied: tensorflow in /usr/local/lib/python3.10/dist-packages (2.14.0)\n",
             "Requirement already satisfied: absl-py>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from tensorflow) (1.4.0)\n",
             "Requirement already satisfied: astunparse>=1.6.0 in /usr/local/lib/python3.10/dist-packages (from tensorflow) (1.6.3)\n",
             "Requirement already satisfied: flatbuffers>=23.5.26 in /usr/local/lib/python3.10/dist-packages (from tensorflow) (23.5.26)\n",
@@ -200,7 +208,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PZ7ucDjjmV5v",
-        "outputId": "0758826d-62bf-4461-ee53-ae925946c889"
+        "outputId": "5be1b707-c775-4d13-ad05-edcc776addc3"
       },
       "execution_count": 3,
       "outputs": [
@@ -248,7 +256,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Instaling Object-Detection Model YOLOv5"
+        "#Importing Object-Detection API Model YOLOv5"
       ],
       "metadata": {
         "id": "Cy6i_1b79p6h"
@@ -273,7 +281,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "snxST5tVm1P5",
-        "outputId": "5b49937d-ca67-4ead-92f8-75f15b735aba"
+        "outputId": "193de765-46ab-4244-90b5-bcef98275711"
       },
       "execution_count": 5,
       "outputs": [
@@ -281,7 +289,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path 'yolov5' already exists and is not an empty directory.\n"
+            "Cloning into 'yolov5'...\n",
+            "remote: Enumerating objects: 16094, done.\u001b[K\n",
+            "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Total 16094 (delta 0), reused 4 (delta 0), pack-reused 16089\u001b[K\n",
+            "Receiving objects: 100% (16094/16094), 14.81 MiB | 16.85 MiB/s, done.\n",
+            "Resolving deltas: 100% (11019/11019), done.\n"
           ]
         }
       ]
@@ -305,7 +319,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o-S1suysrAwm",
-        "outputId": "5f6dc3c3-4563-4922-a2a1-037a337405e7"
+        "outputId": "005e57be-17ef-4932-be4c-e11e1cda981f"
       },
       "execution_count": 6,
       "outputs": [
@@ -337,9 +351,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdiKBHI5rYwz",
-        "outputId": "25472ac9-0a09-470e-ea96-41046a4c4e76"
+        "outputId": "4959c8b3-17db-48bc-f889-f3d0fb1bd641"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +420,7 @@
       "cell_type": "markdown",
       "source": [
         "Enter source image path\n",
-        "1. Do not have space or special characters in your names, folders, and their paths"
+        "* Do not have space or special characters in your names, folders, and their paths"
       ],
       "metadata": {
         "id": "DCVEjMEftm24"
@@ -422,9 +436,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1nd65NWes6eL",
-        "outputId": "03c6e49b-29d0-4347-c1f1-d26956a26497"
+        "outputId": "90f2b759-f83a-4d8d-8083-d9032facdf40"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,8 +449,8 @@
             "\n",
             "Fusing layers... \n",
             "YOLOv5m summary: 290 layers, 21172173 parameters, 0 gradients, 48.9 GFLOPs\n",
-            "image 1/1 /content/drive/MyDrive/Colab_Notebooks/Images/street.jpg: 448x640 2 persons, 4 cars, 4 traffic lights, 1 stop sign, 2 handbags, 713.0ms\n",
-            "Speed: 1.0ms pre-process, 713.0ms inference, 4.5ms NMS per image at shape (1, 3, 640, 640)\n",
+            "image 1/1 /content/drive/MyDrive/Colab_Notebooks/Images/street.jpg: 448x640 2 persons, 4 cars, 4 traffic lights, 1 stop sign, 2 handbags, 784.3ms\n",
+            "Speed: 1.0ms pre-process, 784.3ms inference, 5.8ms NMS per image at shape (1, 3, 640, 640)\n",
             "Results saved to \u001b[1mruns/detect/exp2\u001b[0m\n"
           ]
         }
@@ -468,12 +482,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 725
+          "height": 926
         },
         "id": "YmQxNnZX8usq",
-        "outputId": "c555ea6e-c48b-41f8-a3dd-30432431654f"
+        "outputId": "ac67748a-5616-4cd1-8567-9d302aae8225"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,7 +498,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 12
         }
       ]
     }
